# memory-mirror

./: .gitignore  AGENTS.md  PR_SUMMARY.md  index.html  memory_mirror_instructions.md  package.json
.github/instructions/: instructions.md
backend/: .env.example  ARCHITECTURE.md  DATABASE_SETUP.md  ELEVENLABS_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml
backend/core/: config.py  database.py  models.py
backend/models/: schemas.py
backend/prisma/: dev.db  schema.prisma
backend/routers/: conversation.py  embeddings.py  mem0.py  test.py  twelvelabs.py  video_analysis.py
backend/services/: elevenlabs_service.py  embedding_service.py  gemini_service.py  llm_service.py  mem0_service.py
backend/tests/: test_gemini.py  test_llm.py  test_tts.py
backend/util/: util.py
frontend/: .env.example  .gitignore  drizzle.config.ts  next.config.ts  package.json  tsconfig.json
frontend/drizzle/: 0000_silly_peter_quill.sql  0001_slow_molly_hayes.sql  0002_dapper_virginia_dare.sql
frontend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/actions/: conversation-actions.ts  mirror-actions.ts
frontend/src/app/api/: route.ts
frontend/src/app/db/: index.ts  schema.ts
frontend/src/app/debug/: page.tsx
frontend/src/app/embedding/: page.tsx
frontend/src/db/: index.ts  schema.ts
frontend/src/hooks/: use-audio-analyzer.ts  use-speech-recognition.ts
frontend/src/providers/: query-provider.tsx
frontend/src/services/: embedding-service.ts  memory-service.ts
frontend/src/types/: memory.ts
rules/: repoRules.md
(+29 files in other folders)
