[project]
name = "backend"
version = "0.1.0"
description = "backend for memory mirror app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "uvicorn[standard]>=0.22.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "twelvelabs>=1.1.0",
    "uvicorn>=0.38.0",
    "prisma>=0.15.0",
]
