[project]
name = "backend"
version = "0.1.0"
description = "backend for memory mirror app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "uvicorn[standard]>=0.22.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "twelvelabs>=1.1.0",
    "uvicorn>=0.38.0",
    "elevenlabs>=1.0.0",
    "ibm-watsonx-ai>=1.5.2",
    "langchain-ibm>=1.0.4",
    "langchain-classic>=1.0.1",
    "langchain-ollama>=1.0.1",
    "requests>=2.32.5",
    "google-generativeai>=0.8.6",
    "mem0ai>=1.0.3",
]
